CopieGen/fichierAntlrParser.cpp

// Generated from C:/Users/heyhey/Desktop/4IF/Compilateur01/Compilateur01\fichierAntlr.g4 by ANTLR 4.7


#include "fichierAntlrVisitor.h"

#include "fichierAntlrParser.h"


using namespace antlrcpp;
using namespace antlr4;

fichierAntlrParser::fichierAntlrParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

fichierAntlrParser::~fichierAntlrParser() {
  delete _interpreter;
}

std::string fichierAntlrParser::getGrammarFileName() const {
  return "fichierAntlr.g4";
}

const std::vector<std::string>& fichierAntlrParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& fichierAntlrParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- BigContext ------------------------------------------------------------------

fichierAntlrParser::BigContext::BigContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fichierAntlrParser::ProgrammeContext* fichierAntlrParser::BigContext::programme() {
  return getRuleContext<fichierAntlrParser::ProgrammeContext>(0);
}


size_t fichierAntlrParser::BigContext::getRuleIndex() const {
  return fichierAntlrParser::RuleBig;
}

antlrcpp::Any fichierAntlrParser::BigContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fichierAntlrVisitor*>(visitor))
    return parserVisitor->visitBig(this);
  else
    return visitor->visitChildren(this);
}

fichierAntlrParser::BigContext* fichierAntlrParser::big() {
  BigContext *_localctx = _tracker.createInstance<BigContext>(_ctx, getState());
  enterRule(_localctx, 0, fichierAntlrParser::RuleBig);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    programme();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgrammeContext ------------------------------------------------------------------

fichierAntlrParser::ProgrammeContext::ProgrammeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t fichierAntlrParser::ProgrammeContext::getRuleIndex() const {
  return fichierAntlrParser::RuleProgramme;
}

void fichierAntlrParser::ProgrammeContext::copyFrom(ProgrammeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Programme_normalContext ------------------------------------------------------------------

std::vector<fichierAntlrParser::DeclarationContext *> fichierAntlrParser::Programme_normalContext::declaration() {
  return getRuleContexts<fichierAntlrParser::DeclarationContext>();
}

fichierAntlrParser::DeclarationContext* fichierAntlrParser::Programme_normalContext::declaration(size_t i) {
  return getRuleContext<fichierAntlrParser::DeclarationContext>(i);
}

std::vector<fichierAntlrParser::FonctionContext *> fichierAntlrParser::Programme_normalContext::fonction() {
  return getRuleContexts<fichierAntlrParser::FonctionContext>();
}

fichierAntlrParser::FonctionContext* fichierAntlrParser::Programme_normalContext::fonction(size_t i) {
  return getRuleContext<fichierAntlrParser::FonctionContext>(i);
}

std::vector<fichierAntlrParser::MainContext *> fichierAntlrParser::Programme_normalContext::main() {
  return getRuleContexts<fichierAntlrParser::MainContext>();
}

fichierAntlrParser::MainContext* fichierAntlrParser::Programme_normalContext::main(size_t i) {
  return getRuleContext<fichierAntlrParser::MainContext>(i);
}

fichierAntlrParser::Programme_normalContext::Programme_normalContext(ProgrammeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any fichierAntlrParser::Programme_normalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fichierAntlrVisitor*>(visitor))
    return parserVisitor->visitProgramme_normal(this);
  else
    return visitor->visitChildren(this);
}
fichierAntlrParser::ProgrammeContext* fichierAntlrParser::programme() {
  ProgrammeContext *_localctx = _tracker.createInstance<ProgrammeContext>(_ctx, getState());
  enterRule(_localctx, 2, fichierAntlrParser::RuleProgramme);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    _localctx = dynamic_cast<ProgrammeContext *>(_tracker.createInstance<fichierAntlrParser::Programme_normalContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(46);
        declaration(); 
      }
      setState(51);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(55);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(52);
        fonction(); 
      }
      setState(57);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(61);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << fichierAntlrParser::T__5)
      | (1ULL << fichierAntlrParser::T__46)
      | (1ULL << fichierAntlrParser::T__47)
      | (1ULL << fichierAntlrParser::T__48)
      | (1ULL << fichierAntlrParser::T__49))) != 0)) {
      setState(58);
      main();
      setState(63);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainContext ------------------------------------------------------------------

fichierAntlrParser::MainContext::MainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t fichierAntlrParser::MainContext::getRuleIndex() const {
  return fichierAntlrParser::RuleMain;
}

void fichierAntlrParser::MainContext::copyFrom(MainContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Main_parametrevoidContext ------------------------------------------------------------------

fichierAntlrParser::Type_fonctionContext* fichierAntlrParser::Main_parametrevoidContext::type_fonction() {
  return getRuleContext<fichierAntlrParser::Type_fonctionContext>(0);
}

fichierAntlrParser::BlocContext* fichierAntlrParser::Main_parametrevoidContext::bloc() {
  return getRuleContext<fichierAntlrParser::BlocContext>(0);
}

std::vector<fichierAntlrParser::DeclarationContext *> fichierAntlrParser::Main_parametrevoidContext::declaration() {
  return getRuleContexts<fichierAntlrParser::DeclarationContext>();
}

fichierAntlrParser::DeclarationContext* fichierAntlrParser::Main_parametrevoidContext::declaration(size_t i) {
  return getRuleContext<fichierAntlrParser::DeclarationContext>(i);
}

fichierAntlrParser::Main_parametrevoidContext::Main_parametrevoidContext(MainContext *ctx) { copyFrom(ctx); }

antlrcpp::Any fichierAntlrParser::Main_parametrevoidContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fichierAntlrVisitor*>(visitor))
    return parserVisitor->visitMain_parametrevoid(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Main_sansparametreContext ------------------------------------------------------------------

fichierAntlrParser::Type_fonctionContext* fichierAntlrParser::Main_sansparametreContext::type_fonction() {
  return getRuleContext<fichierAntlrParser::Type_fonctionContext>(0);
}

fichierAntlrParser::BlocContext* fichierAntlrParser::Main_sansparametreContext::bloc() {
  return getRuleContext<fichierAntlrParser::BlocContext>(0);
}

std::vector<fichierAntlrParser::DeclarationContext *> fichierAntlrParser::Main_sansparametreContext::declaration() {
  return getRuleContexts<fichierAntlrParser::DeclarationContext>();
}

fichierAntlrParser::DeclarationContext* fichierAntlrParser::Main_sansparametreContext::declaration(size_t i) {
  return getRuleContext<fichierAntlrParser::DeclarationContext>(i);
}

fichierAntlrParser::Main_sansparametreContext::Main_sansparametreContext(MainContext *ctx) { copyFrom(ctx); }

antlrcpp::Any fichierAntlrParser::Main_sansparametreContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fichierAntlrVisitor*>(visitor))
    return parserVisitor->visitMain_sansparametre(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Main_avecparametreContext ------------------------------------------------------------------

fichierAntlrParser::Type_fonctionContext* fichierAntlrParser::Main_avecparametreContext::type_fonction() {
  return getRuleContext<fichierAntlrParser::Type_fonctionContext>(0);
}

fichierAntlrParser::ParametreContext* fichierAntlrParser::Main_avecparametreContext::parametre() {
  return getRuleContext<fichierAntlrParser::ParametreContext>(0);
}

fichierAntlrParser::BlocContext* fichierAntlrParser::Main_avecparametreContext::bloc() {
  return getRuleContext<fichierAntlrParser::BlocContext>(0);
}

std::vector<fichierAntlrParser::DeclarationContext *> fichierAntlrParser::Main_avecparametreContext::declaration() {
  return getRuleContexts<fichierAntlrParser::DeclarationContext>();
}

fichierAntlrParser::DeclarationContext* fichierAntlrParser::Main_avecparametreContext::declaration(size_t i) {
  return getRuleContext<fichierAntlrParser::DeclarationContext>(i);
}

fichierAntlrParser::Main_avecparametreContext::Main_avecparametreContext(MainContext *ctx) { copyFrom(ctx); }

antlrcpp::Any fichierAntlrParser::Main_avecparametreContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fichierAntlrVisitor*>(visitor))
    return parserVisitor->visitMain_avecparametre(this);
  else
    return visitor->visitChildren(this);
}
fichierAntlrParser::MainContext* fichierAntlrParser::main() {
  MainContext *_localctx = _tracker.createInstance<MainContext>(_ctx, getState());
  enterRule(_localctx, 4, fichierAntlrParser::RuleMain);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(108);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<MainContext *>(_tracker.createInstance<fichierAntlrParser::Main_avecparametreContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(64);
      type_fonction();
      setState(65);
      match(fichierAntlrParser::T__0);
      setState(66);
      match(fichierAntlrParser::T__1);
      setState(67);
      parametre();
      setState(68);
      match(fichierAntlrParser::T__2);
      setState(69);
      match(fichierAntlrParser::T__3);
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << fichierAntlrParser::T__46)
        | (1ULL << fichierAntlrParser::T__47)
        | (1ULL << fichierAntlrParser::T__48))) != 0)) {
        setState(70);
        declaration();
        setState(75);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(76);
      bloc();
      setState(77);
      match(fichierAntlrParser::T__4);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<MainContext *>(_tracker.createInstance<fichierAntlrParser::Main_sansparametreContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(79);
      type_fonction();
      setState(80);
      match(fichierAntlrParser::T__0);
      setState(81);
      match(fichierAntlrParser::T__1);
      setState(82);
      match(fichierAntlrParser::T__2);
      setState(83);
      match(fichierAntlrParser::T__3);
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << fichierAntlrParser::T__46)
        | (1ULL << fichierAntlrParser::T__47)
        | (1ULL << fichierAntlrParser::T__48))) != 0)) {
        setState(84);
        declaration();
        setState(89);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(90);
      bloc();
      setState(91);
      match(fichierAntlrParser::T__4);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<MainContext *>(_tracker.createInstance<fichierAntlrParser::Main_parametrevoidContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(93);
      type_fonction();
      setState(94);
      match(fichierAntlrParser::T__0);
      setState(95);
      match(fichierAntlrParser::T__1);
      setState(96);
      match(fichierAntlrParser::T__5);
      setState(97);
      match(fichierAntlrParser::T__2);
      setState(98);
      match(fichierAntlrParser::T__3);
      setState(102);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << fichierAntlrParser::T__46)
        | (1ULL << fichierAntlrParser::T__47)
        | (1ULL << fichierAntlrParser::T__48))) != 0)) {
        setState(99);
        declaration();
        setState(104);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(105);
      bloc();
      setState(106);
      match(fichierAntlrParser::T__4);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FonctionContext ------------------------------------------------------------------

fichierAntlrParser::FonctionContext::FonctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t fichierAntlrParser::FonctionContext::getRuleIndex() const {
  return fichierAntlrParser::RuleFonction;
}

void fichierAntlrParser::FonctionContext::copyFrom(FonctionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Fonction_avecparametreContext ------------------------------------------------------------------

fichierAntlrParser::Type_fonctionContext* fichierAntlrParser::Fonction_avecparametreContext::type_fonction() {
  return getRuleContext<fichierAntlrParser::Type_fonctionContext>(0);
}

fichierAntlrParser::Nom_varContext* fichierAntlrParser::Fonction_avecparametreContext::nom_var() {
  return getRuleContext<fichierAntlrParser::Nom_varContext>(0);
}

fichierAntlrParser::ParametreContext* fichierAntlrParser::Fonction_avecparametreContext::parametre() {
  return getRuleContext<fichierAntlrParser::ParametreContext>(0);
}

fichierAntlrParser::BlocContext* fichierAntlrParser::Fonction_avecparametreContext::bloc() {
  return getRuleContext<fichierAntlrParser::BlocContext>(0);
}

std::vector<fichierAntlrParser::DeclarationContext *> fichierAntlrParser::Fonction_avecparametreContext::declaration() {
  return getRuleContexts<fichierAntlrParser::DeclarationContext>();
}

fichierAntlrParser::DeclarationContext* fichierAntlrParser::Fonction_avecparametreContext::declaration(size_t i) {
  return getRuleContext<fichierAntlrParser::DeclarationContext>(i);
}

fichierAntlrParser::Fonction_avecparametreContext::Fonction_avecparametreContext(FonctionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any fichierAntlrParser::Fonction_avecparametreContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fichierAntlrVisitor*>(visitor))
    return parserVisitor->visitFonction_avecparametre(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Fonction_parametrevoidContext ------------------------------------------------------------------

fichierAntlrParser::Type_fonctionContext* fichierAntlrParser::Fonction_parametrevoidContext::type_fonction() {
  return getRuleContext<fichierAntlrParser::Type_fonctionContext>(0);
}

fichierAntlrParser::Nom_varContext* fichierAntlrParser::Fonction_parametrevoidContext::nom_var() {
  return getRuleContext<fichierAntlrParser::Nom_varContext>(0);
}

fichierAntlrParser::BlocContext* fichierAntlrParser::Fonction_parametrevoidContext::bloc() {
  return getRuleContext<fichierAntlrParser::BlocContext>(0);
}

std::vector<fichierAntlrParser::DeclarationContext *> fichierAntlrParser::Fonction_parametrevoidContext::declaration() {
  return getRuleContexts<fichierAntlrParser::DeclarationContext>();
}

fichierAntlrParser::DeclarationContext* fichierAntlrParser::Fonction_parametrevoidContext::declaration(size_t i) {
  return getRuleContext<fichierAntlrParser::DeclarationContext>(i);
}

fichierAntlrParser::Fonction_parametrevoidContext::Fonction_parametrevoidContext(FonctionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any fichierAntlrParser::Fonction_parametrevoidContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fichierAntlrVisitor*>(visitor))
    return parserVisitor->visitFonction_parametrevoid(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Fonction_sansparametreContext ------------------------------------------------------------------

fichierAntlrParser::Type_fonctionContext* fichierAntlrParser::Fonction_sansparametreContext::type_fonction() {
  return getRuleContext<fichierAntlrParser::Type_fonctionContext>(0);
}

fichierAntlrParser::Nom_varContext* fichierAntlrParser::Fonction_sansparametreContext::nom_var() {
  return getRuleContext<fichierAntlrParser::Nom_varContext>(0);
}

fichierAntlrParser::BlocContext* fichierAntlrParser::Fonction_sansparametreContext::bloc() {
  return getRuleContext<fichierAntlrParser::BlocContext>(0);
}

std::vector<fichierAntlrParser::DeclarationContext *> fichierAntlrParser::Fonction_sansparametreContext::declaration() {
  return getRuleContexts<fichierAntlrParser::DeclarationContext>();
}

fichierAntlrParser::DeclarationContext* fichierAntlrParser::Fonction_sansparametreContext::declaration(size_t i) {
  return getRuleContext<fichierAntlrParser::DeclarationContext>(i);
}

fichierAntlrParser::Fonction_sansparametreContext::Fonction_sansparametreContext(FonctionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any fichierAntlrParser::Fonction_sansparametreContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fichierAntlrVisitor*>(visitor))
    return parserVisitor->visitFonction_sansparametre(this);
  else
    return visitor->visitChildren(this);
}
fichierAntlrParser::FonctionContext* fichierAntlrParser::fonction() {
  FonctionContext *_localctx = _tracker.createInstance<FonctionContext>(_ctx, getState());
  enterRule(_localctx, 6, fichierAntlrParser::RuleFonction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(154);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<FonctionContext *>(_tracker.createInstance<fichierAntlrParser::Fonction_avecparametreContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(110);
      type_fonction();
      setState(111);
      nom_var();
      setState(112);
      match(fichierAntlrParser::T__1);
      setState(113);
      parametre();
      setState(114);
      match(fichierAntlrParser::T__2);
      setState(115);
      match(fichierAntlrParser::T__3);
      setState(119);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << fichierAntlrParser::T__46)
        | (1ULL << fichierAntlrParser::T__47)
        | (1ULL << fichierAntlrParser::T__48))) != 0)) {
        setState(116);
        declaration();
        setState(121);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(122);
      bloc();
      setState(123);
      match(fichierAntlrParser::T__4);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<FonctionContext *>(_tracker.createInstance<fichierAntlrParser::Fonction_sansparametreContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(125);
      type_fonction();
      setState(126);
      nom_var();
      setState(127);
      match(fichierAntlrParser::T__1);
      setState(128);
      match(fichierAntlrParser::T__2);
      setState(129);
      match(fichierAntlrParser::T__3);
      setState(133);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << fichierAntlrParser::T__46)
        | (1ULL << fichierAntlrParser::T__47)
        | (1ULL << fichierAntlrParser::T__48))) != 0)) {
        setState(130);
        declaration();
        setState(135);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(136);
      bloc();
      setState(137);
      match(fichierAntlrParser::T__4);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<FonctionContext *>(_tracker.createInstance<fichierAntlrParser::Fonction_parametrevoidContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(139);
      type_fonction();
      setState(140);
      nom_var();
      setState(141);
      match(fichierAntlrParser::T__1);
      setState(142);
      match(fichierAntlrParser::T__5);
      setState(143);
      match(fichierAntlrParser::T__2);
      setState(144);
      match(fichierAntlrParser::T__3);
      setState(148);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << fichierAntlrParser::T__46)
        | (1ULL << fichierAntlrParser::T__47)
        | (1ULL << fichierAntlrParser::T__48))) != 0)) {
        setState(145);
        declaration();
        setState(150);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(151);
      bloc();
      setState(152);
      match(fichierAntlrParser::T__4);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParametreContext ------------------------------------------------------------------

fichierAntlrParser::ParametreContext::ParametreContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t fichierAntlrParser::ParametreContext::getRuleIndex() const {
  return fichierAntlrParser::RuleParametre;
}

void fichierAntlrParser::ParametreContext::copyFrom(ParametreContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Parametre_tableauContext ------------------------------------------------------------------

fichierAntlrParser::Type_varContext* fichierAntlrParser::Parametre_tableauContext::type_var() {
  return getRuleContext<fichierAntlrParser::Type_varContext>(0);
}

fichierAntlrParser::Nom_varContext* fichierAntlrParser::Parametre_tableauContext::nom_var() {
  return getRuleContext<fichierAntlrParser::Nom_varContext>(0);
}

fichierAntlrParser::ExprContext* fichierAntlrParser::Parametre_tableauContext::expr() {
  return getRuleContext<fichierAntlrParser::ExprContext>(0);
}

fichierAntlrParser::Parametre_tableauContext::Parametre_tableauContext(ParametreContext *ctx) { copyFrom(ctx); }

antlrcpp::Any fichierAntlrParser::Parametre_tableauContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fichierAntlrVisitor*>(visitor))
    return parserVisitor->visitParametre_tableau(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Parametre_normalContext ------------------------------------------------------------------

fichierAntlrParser::Type_varContext* fichierAntlrParser::Parametre_normalContext::type_var() {
  return getRuleContext<fichierAntlrParser::Type_varContext>(0);
}

fichierAntlrParser::Nom_varContext* fichierAntlrParser::Parametre_normalContext::nom_var() {
  return getRuleContext<fichierAntlrParser::Nom_varContext>(0);
}

fichierAntlrParser::Parametre1Context* fichierAntlrParser::Parametre_normalContext::parametre1() {
  return getRuleContext<fichierAntlrParser::Parametre1Context>(0);
}

fichierAntlrParser::Parametre_normalContext::Parametre_normalContext(ParametreContext *ctx) { copyFrom(ctx); }

antlrcpp::Any fichierAntlrParser::Parametre_normalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fichierAntlrVisitor*>(visitor))
    return parserVisitor->visitParametre_normal(this);
  else
    return visitor->visitChildren(this);
}
fichierAntlrParser::ParametreContext* fichierAntlrParser::parametre() {
  ParametreContext *_localctx = _tracker.createInstance<ParametreContext>(_ctx, getState());
  enterRule(_localctx, 8, fichierAntlrParser::RuleParametre);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(166);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<ParametreContext *>(_tracker.createInstance<fichierAntlrParser::Parametre_normalContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(156);
      type_var();
      setState(157);
      nom_var();
      setState(158);
      parametre1();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<ParametreContext *>(_tracker.createInstance<fichierAntlrParser::Parametre_tableauContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(160);
      type_var();
      setState(161);
      nom_var();
      setState(162);
      match(fichierAntlrParser::T__6);
      setState(163);
      expr(0);
      setState(164);
      match(fichierAntlrParser::T__7);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Parametre1Context ------------------------------------------------------------------

fichierAntlrParser::Parametre1Context::Parametre1Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t fichierAntlrParser::Parametre1Context::getRuleIndex() const {
  return fichierAntlrParser::RuleParametre1;
}

void fichierAntlrParser::Parametre1Context::copyFrom(Parametre1Context *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Parametre1_normalContext ------------------------------------------------------------------

fichierAntlrParser::ParametreContext* fichierAntlrParser::Parametre1_normalContext::parametre() {
  return getRuleContext<fichierAntlrParser::ParametreContext>(0);
}

fichierAntlrParser::Parametre1_normalContext::Parametre1_normalContext(Parametre1Context *ctx) { copyFrom(ctx); }

antlrcpp::Any fichierAntlrParser::Parametre1_normalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fichierAntlrVisitor*>(visitor))
    return parserVisitor->visitParametre1_normal(this);
  else
    return visitor->visitChildren(this);
}
fichierAntlrParser::Parametre1Context* fichierAntlrParser::parametre1() {
  Parametre1Context *_localctx = _tracker.createInstance<Parametre1Context>(_ctx, getState());
  enterRule(_localctx, 10, fichierAntlrParser::RuleParametre1);
  size_t _la = 0;
